Updated resume and skills

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<h4 style="color: rgb(223, 223, 223); padding-top:10px">Skills</h4>
 						<p>
 							•	C, C++, C#, Python, Java<br>
-							•	Unity, Unreal, Pygame<br>
+							•	Unity, Unreal, Phaser, Pygame<br>
 							•	Git, Sourcetree<br>
 							•	Scikit-Learn, Keras, OpenCv<br>
 							•	HTML, CSS, Javascript, SQL
