Added section index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div id="main">
 			<h1 style="font-weight: 800; font-size: 50px;">Portfolio</h1>
 					<!-- One -->
-						<section id="one">
+						<section id="main">
 							<header class="major">
 								<h2>A little about myself</h2>
 							</header>
@@ -60,10 +60,17 @@
 								And I actually used some of these concepts in games, like in Flappy Bird that you'll see in the 'Recent Work' section.<br>
 								Feel free to hit me up with questions or comments, or just to chat!
 							</p>
+
+							<h3>Scroll to:</h3>
+							<ul>
+								<li><a href="#phaser">Phaser Projects</a></li>
+								<li><a href="#unreal">Unreal Projects</a></li>
+								<li><a href="#unity">Unity Projects</a></li>
+							</ul>
 						</section>
 
 					<!-- Two -->
-					<section id="two">
+					<section id="phaser">
 					<h2>Phaser 3 - Javascript Projects</h2>
 						<p style="margin-bottom: 50px;">Phaser 3 and JavaScript are like a dream team for making games! 
 							JavaScript's flexibility and Phaser 3's user-friendly features and helpful documentation make game development a breeze.</p>
@@ -115,7 +122,7 @@
 						</section>
 
 					
-						<section id="two">
+						<section id="unreal">
 							<h2>Unreal Projects</h2>
 							<p style="margin-bottom: 50px;">I've built some cool FPS multiplayer games using Unreal Engine, 
 								fueled by my love for games like Counter-Strike and Valorant. 
@@ -192,7 +199,7 @@
 
 							<br>
 							
-							<section id="two">
+							<section id="unity">
 							<h2>Unity Projects</h2>
 							<p style="margin-bottom: 50px;">These are the games I'm most proud of (till now).
 								I spent some time on these games trying to polish and improve some of the mechanics that I already knew.
