Updated CV and contact info

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 					<h1 style="font-size: medium;">
 
 						<div style="font-size: 4ch; color: rgb(223, 223, 223);"><a href="https://github.com/aliaboshady" target="_blank" class="icon brands fa-github"> Ali Aboshady</a> - <a href="images/CV.pdf" target="_blank" download="Ali Aboshady - CV"><button style="font-size:20px">Resume <i class="fa fa-download"></i></a></button></div><br>
-						<p style="font-size: 25px;">Game Developer</p>
 						<div style="color: rgb(223, 223, 223);" class="icon solid fa-envelope"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">ali_aboshady@hotmail.com</span></div>
-						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">+44 07751559084</span></div><br>
+						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">UK +44 07751559084</span></div>
+						<div style="color: rgb(223, 223, 223);" class="icon solid fa-mobile-alt"><span style="padding-left: 1ch; color: rgb(223, 223, 223);">EGP +20 1000309625</span></div><br>
 						
 						<h4 style="color: rgb(223, 223, 223);">Background</h4>
 						<p>
-							•	Bachelors in Computer Engineering<br>
-							•	Masters in Data Science and Computational Intelligence<br>
-							•	Internship - Game Programmer at Black Cat Entertainment<br>
-							•	C++ Game Programmer at Inspired Entertainment<br>
-							•	C#/SQL Software Developer at InFor/Lighthouse Systems
+							•	Bachelors in Computer Engineering - Egypt<br>
+							•	Masters in Data Science and Computational Intelligence - UK<br>
+							•	Internship - Game Programmer at Black Cat Entertainment - UK<br>
+							•	C++ Game Programmer at Inspired Entertainment - UK<br>
+							•	C#/SQL Software Developer at InFor/Lighthouse Systems - UK
 						</p>
 
 						<h4 style="color: rgb(223, 223, 223); padding-top:10px">Skills</h4>
@@ -45,7 +45,7 @@
 
 		<!-- Main -->
 			<div id="main">
-			<h1 style="font-weight: 800; font-size: 50px;">Portfolio</h1>
+			<h1 style="font-weight: 800; font-size: 50px;">Game Dev Portfolio</h1>
 					<!-- One -->
 						<section id="main">
 							<header class="major">
