--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 						<p>
 							•	C, C++, C#, Python, Java<br>
 							•	Unity, Unreal, Phaser, Pygame<br>
-							•	Git, Sourcetree<br>
 							•	Scikit-Learn, Keras, OpenCv<br>
-							•	HTML, CSS, Javascript, SQL, React
+							•	Javascript, React, Next, Typescript<br>
+							•	React Native, Flutter, Dart<br>
+							•	SQL, Node JS, Express JS
 						</p>
 						
 					</h1>
